@startuml
package core{
annotation core {

-var ErrIsNotAllowed: 
+NewTransaction(date Time, amount int64, balance int64): Transaction
}
interface Transacter{
+Transact(date Time, amount int64): error
}
class Account {
-balance: int64
-transactions: []Transaction
+History(): []Transaction
+CheckBalance(): int64
+Transact(date Time, amount int64): error
}
class Operation {
+Date: Time
+Amount: int64

}
class RequestDeposit {
+: Operation
+Deposit(to Transacter): error
}
class RequestTransfer {
+: Operation
+Transfer(from Transacter, to Transacter): error
}
class RequestWithdraw {
+: Operation
+Withdraw(from Transacter): error
}
class Transaction {
-date: Time
-amount: int64
-balance: int64

}
}
"RequestDeposit" --> "Operation"
"RequestTransfer" --> "Operation"
"RequestWithdraw" --> "Operation"
"Account" --|> "Transacter"
@enduml